appId: co.openvine.app.staging
---
#Utility TC for search workaround
#Steps:

- stopApp
- launchApp

- doubleTapOn:
    id: explore_tab
    delay: 100
- tapOn: |-
    Popular
    Tab 3 of 5

- doubleTapOn:
    id: explore_tab
    delay: 100
- tapOn: Search

- tapOn: Find something cool...
- inputText: ${VIDEO_TITLE}
